# OrbMechKeeby_Curtis

./: .gitignore  .readthedocs.yaml  Algorithm Number Reference.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  __init__.py  main.py  pyproject.toml
C++ Headers/: J0.h  LST.h  atan2d_0_360.h  atmosisa.h  atmosphere.h  bisect.h  coe_from_sv.h  dcm_from_q.h  dcm_to_euler.h  dcm_to_ypr.h  fDot_and_gDot.h  fDot_and_gDot_ta.h  f_and_g.h  f_and_g_ta.h  gauss.h  gibbs.h  heun.h  interplanetary.h  kepler_E.h  kepler_H.h  kepler_U.h  lambert.h  los.h  lunar_position.h  month_planet_names.h  planet_elements_and_sv.h  q_from_dcm.h  quat_rotate.h  quatinv.h  (+14 more)
curtis_scripts/cpp/: CMakeLists.txt
curtis_scripts/cpp/bindings/: README.md
curtis_scripts/cpp/headers/: J0.h  LST.h  atan2d_0_360.h  atmosisa.h  atmosphere.h  bisect.h  coe_from_sv.h  dcm_from_q.h  dcm_to_euler.h  dcm_to_ypr.h  fDot_and_gDot.h  fDot_and_gDot_ta.h  f_and_g.h  f_and_g_ta.h  gauss.h  gibbs.h  heun.h  interplanetary.h  kepler_E.h  kepler_H.h  kepler_U.h  lambert.h  los.h  lunar_position.h  month_planet_names.h  planet_elements_and_sv.h  q_from_dcm.h  quat_rotate.h  quatinv.h  quatmultiply.h  ra_and_dec_from_r.h  rk1_4.h  rkf45.h  rsmooth.h  rv_from_observe.h  rv_from_r0v0.h  rv_from_r0v0_ta.h  rva_relative.h  simpsons_lunar_ephemeris.h  solar_position.h  (+3 more)
curtis_scripts/cpp/sources/: J2_perturbation.cpp  cowell.cpp  encke.cpp  gravity_turn.cpp  ground_track.cpp  integrate_thrust.cpp  lunar_perturbation.cpp  lunar_trajectory.cpp  orbit.cpp  solar_perturbation.cpp  spinning_top.cpp  threebody.cpp  twobody3d.cpp
tests/cpp/: CMakeLists.txt  README.md
tests/cpp/Sources/: J0_test.cpp  LST_test.cpp  atan2d_0_360_test.cpp  atmosphere_test.cpp  bisect_test.cpp  coe_from_sv_test.cpp  dcm_from_q_test.cpp  dcm_to_euler_test.cpp  dcm_to_ypr_test.cpp  fDot_and_gDot_ta_test.cpp  fDot_and_gDot_test.cpp  f_and_g_ta_test.cpp  f_and_g_test.cpp  gauss_test.cpp  gibbs_test.cpp  heun_test.cpp  interplanetary_test.cpp  kepler_E_test.cpp  kepler_H_test.cpp  kepler_U_test.cpp  lambert_test.cpp  los_test.cpp  lunar_position_test.cpp  month_planet_names_test.cpp  planet_elements_and_sv_test.cpp  q_from_dcm_test.cpp  quat_rotate_test.cpp  ra_and_dec_from_r_test.cpp  rk1_4_test.cpp  rkf45_test.cpp  rkf45_test_lunar.cpp  rv_from_observe_test.cpp  rv_from_r0v0_ta_test.cpp  rv_from_r0v0_test.cpp  rva_relative_test.cpp  simpsons_lunar_ephemeris_test.cpp  solar_position_test.cpp  stumpC_test.cpp  stumpS_test.cpp  sv_from_coe_test.cpp
(+451 files in other folders)
