[build-system]
requires = ["scikit-build-core>=0.8", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "space-science-and-astrodynamics"
version = "0.1.0a0"
description = "Open-source algorithms for orbital mechanics and astrodynamics"
authors = [{name = "Keeby Astro"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib"]